--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,34 @@
   cursor: pointer;
 }
 
+.year-dropdown {
+  padding: 5px;
+  margin: 5px;
+  border-radius: 5px;
+  background-color: aliceblue;
+  border: #777;
+}
+
+.add-movie-button {
+
+  padding: 8px 16px;
+  background-color: #4CAF50; /* Green background */
+  color: white; 
+  border: none;
+  border-radius: 4px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.add-movie-button:hover {
+  background-color: #45a049;
+}
+
+
 .spinner {
   height: 80px;
   margin: auto;
@@ -29,10 +57,6 @@
 
 /* new css for movie component */
 
-/* {
-  /* box-sizing: border-box;
-}
- */
 
 .movies {
   display: flex;
@@ -53,40 +77,7 @@ body {
   
 }
 
-/* 
-align-items: center;
-border-color: blue;
-border-width: 5px;*/
 
-/* .card {
-  width: 20rem;
-  height: 35rem;
-  border: 2px solid black;
-  border-radius: 10px;
-  margin: 1%;
-  overflow: hidden;
-  align-items: center;
-  position: relative;
-}
-.close-button {
-  position: absolute;
-  top: 2px;
-  right: 2px;
-  z-index: 2;
-  background: transparent;
-  border: none;
-  font-size: 20px;
-  cursor: pointer;
-  color: red; 
-  
-
-}
-.card-img-top{
-  width: 100%;
-  height: 450px;
-  object-fit: cover;
-  z-index: 1;
-} */
 
 .card {
   width: 200px;
@@ -155,12 +146,7 @@ border-width: 5px;*/
   margin: 0 10px 30px 10px;
 }
 
-/* .movie {
-  padding: 5px 25px 10px 25px;
-  max-width: 25%;
-  justify-content: space-between;
-  align-items: center;
-} */
+
 
 .errorMessage {
   margin: auto;
@@ -222,6 +208,6 @@ input[type="submit"]:hover {
 }
 @media screen and (max-width: 768px) {
   .App {
-    padding: 0 10px; /* Adjust as needed for smaller screens */
+    padding: 0 10px; 
   }
 }
